#14: Create feature styler (https://github.com/Polymap4/polymap4-p4/issues/issue/14)
 * fixed issue with wrong typing when unscaling